ajout des liens

--- a/projet4/index.html
+++ b/projet4/index.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8" />
         <meta name="description" content="Agence de webdesign qui accompagne ses clients dans leurs démarches afin acquerir une plus grande attractivité et visibilité sur internet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+        <Link: https://animassoprojets.fr/projet4; rel=canonical
         <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
-        <link rel="stylesheet" type="text/css" href="./css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" type="text/css" href="./css/font-awesome.css" />
-        <link rel="stylesheet" type="text/css" href="./css/et-line.css" />
+        <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
+        <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
         <title>La chouette agence entreprise de webdesign à Lyon</title>
 
-        <script src="./js/jquery-2.1.0.js"></script>
-        <script src="./js/bootstrap.js"></script>
-        <script src="./js/blocs.js"></script>
-        <script src="./js/jquery.touchSwipe.js" defer></script>
-        <script src="./js/gmaps.js"></script>
+        <script src="./js/jquery-2.1.0.min.js"></script>
+        <script src="./js/bootstrap.min.js"></script>
+        <script src="./js/blocs.min.js"></script>
+        <script src="./js/jquery.touchSwipe.min.js" defer></script>
+        <script src="./js/gmaps.min.js"></script>
 
         <!-- Balise Opengraph pour facebook-->
         <meta property="og:url" content="http://animassoprojets.fr/projet4/" />
@@ -61,7 +61,7 @@
                                     <a href="#portfolio" title="Notre portofolio">Portfolio</a>
                                 </li>
                                 <li>
-                                    <a href="#cta" title="Contactez nous">Contact</a>
+                                    <a href="contact.html" title="Contactez nous">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -206,7 +206,7 @@
                         <div class="row tight-width-whitespace portfolio-row">
                             <div class="col-sm-6">
                                 <a href="#" data-lightbox="img/Création-site-pour-voyageur.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-                                    <img src="img/Création-site-pour-voyageur.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" />
+                                    <img src="img/Création-site-pour-voyageur.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" />
                                 </a>
                                 <h3 class="mg-md text-center">
                                     Création d'un site internet pour un voyageur
@@ -217,7 +217,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <a href="#" data-lightbox="img/Conception-site-agence-de-mariage.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-                                    <img src="img/Conception-site-agence-de-mariage.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" />
+                                    <img src="img/Conception-site-agence-de-mariage.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" />
                                 </a>
                                 <h3 class="mg-md text-center">
                                     Conception d'un site pour une agence de mariage
