--- a/projet4/contact.html
+++ b/projet4/contact.html
@@ -15,8 +15,8 @@
 	<script src="./js/jquery-2.1.0.min.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
+	<script src="./js/jqBootstrapValidation.min.js"></script>
+	<script src="./js/formHandler.min.js"></script>
     <title>Contacter la Chouette agence de Lyon</title>
 
     
@@ -81,14 +81,14 @@
 					</div>
 					<div class="form-group">
 						<label for="email">Adresse email </label>
-						<input id="email" class="form-control" type="email" aria-labelledby="email" required />
+						<input id="email" class="form-control" type="email" aria-labelledby="adresse mail" required />
 					</div>
 					<div class="form-group">
-						<label for="input_504"">Comment nous avez-vous connu ?</label>
-						<input id="input_504" class=form-control" type="text" aria-labelledby="input_504" required id="input_504" />
+						<label for="input_504">Comment nous avez-vous connu ?</label>
+						<input id="input_504" class=form-control" type="text" aria-labelledby="input_504" required />
 					</div>
 					<div class="form-group">
-						<label for="message"
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label>
 						<textarea id="message" class="form-control" type="text" required></textarea>
