ajout du sitemap modif du contraste et des liens

--- a/projet4/contact.html
+++ b/projet4/contact.html
@@ -32,7 +32,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="atlanta web design logo"  /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="logo agence web la-chouette-agence"  /></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -81,7 +81,7 @@
 					</div>
 					<div class="form-group">
 						<label for="email">Adresse email </label>
-						<input id="email" class="form-control" type="email" aria-labelledby="adresse mail" required />
+						<input id="email" class="form-control" type="email" aria-labelledby="email" required />
 					</div>
 					<div class="form-group">
 						<label for="input_504">Comment nous avez-vous connu ?</label>
@@ -91,7 +91,7 @@
 						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label>
-						<textarea id="message" class="form-control" type="text" required></textarea>
+						<textarea id="message" class="form-control"type="message"aria-labelledby="inscrire votre projet" required></textarea>
 					</div> 
 					<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 						Envoyer
@@ -125,24 +125,26 @@
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://twitter.com/explore"><span class="fa fa-twitter icon-md"></span></a>
+							<a class="social" title="allez sur notre compte twitter" href="https://twitter.com/explore">TWITTER <span class="fa fa-twitter icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+							<a class="social" title="allez sur notre compte facebook" href="https://www.facebook.com/">FACEBOOK<span class="fa fa-facebook icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+							<a class="social" title="allez sur notre compte dribble" href="https://dribbble.com/">DRIBBLE<span class="fa fa-dribbble icon-md"></span></a>
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="text-center">
-							<a class="social" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span></a>
+							<a class="social" title="allez sur notre compte instagram" href="https://www.instagram.com/?hl=fr">INSTAGRAM<span class="fa fa-instagram icon-md"></span></a>
 						</div>
-					</div>   
+					</div>	
+						
+					
 				</div>
 			</div>
 		</div>
