--- a/projet4/index.html
+++ b/projet4/index.html
@@ -4,19 +4,13 @@
         <meta charset="utf-8" />
         <meta name="description" content="Agence de webdesign qui accompagne ses clients dans leurs démarches afin acquerir une plus grande attractivité et visibilité sur internet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <Link: https://animassoprojets.fr/projet4; rel=canonical
-        <link rel="shortcut icon" type="image/png" href="favicon.jpg" />
-        <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
-        <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
+        <link rel="preload">
+        <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+
+        
         <title>La chouette agence entreprise de webdesign à Lyon</title>
 
-        <script src="./js/jquery-2.1.0.min.js"></script>
-        <script src="./js/bootstrap.min.js"></script>
-        <script src="./js/blocs.min.js"></script>
-        <script src="./js/jquery.touchSwipe.min.js" defer></script>
-        <script src="./js/gmaps.min.js"></script>
+       
 
         <!-- Balise Opengraph pour facebook-->
         <meta property="og:url" content="http://animassoprojets.fr/projet4/" />
@@ -44,7 +38,9 @@
                 <div class="container bloc-sm">
                     <nav class="navbar row">
                         <div class="navbar-header">
-                            <a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" /></a>
+                            <a class="navbar-brand" href="index.html">
+                                <figure><img src="img/la-chouette-agence.png" alt="logo agence web la-chouette-agence" /></figure>
+                            </a>
                             <button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
                                 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                             </button>
@@ -76,7 +72,7 @@
                     <div class="container bloc-lg">
                         <div class="row tight-width-whitespace">
                             <div class="col-sm-12">
-                                <img src="img/logo.png" class="center-block image-resize-mode" alt="La chouette agence, agence web paris, création logo paris" />
+                               <figure> <img src="img/logo.png" class="center-block image-resize-mode" alt="Logo de la chouette agence"/></figure>
                                 <h1 class="text-center hero-bloc-text tc-white">
                                     La chouette agence.
                                 </h1>
@@ -182,7 +178,7 @@
                         <div class="row tight-width-whitespace portfolio-row">
                             <div class="col-sm-6">
                                 <a href="#" data-lightbox="img/Refonte-site-journal-local.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-                                    <img src="img/Refonte-site-journal-local.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" />
+                                   <figure><img src="img/Refonte-site-journal-local.jpg" alt="photo refonte site web journal" class="img-responsive portfolio-thumb" /></figure>
                                 </a>
                                 <h3 class="mg-md text-center">
                                     Refonte d'un site web pour un journal local
@@ -193,7 +189,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <a href="#" data-lightbox="img/Création-site-web-pour-phtographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-                                    <img src="img/Création-site-web-pour-phtographe.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" />
+                                    <img src="img/Création-site-web-pour-phtographe.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" />
                                 </a>
                                 <h3 class="mg-md text-center">
                                     Création d'un site web pour photographes
@@ -205,8 +201,8 @@
                         </div>
                         <div class="row tight-width-whitespace portfolio-row">
                             <div class="col-sm-6">
-                                <a href="#" data-lightbox="img/Création-site-pour-voyageur.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-                                    <img src="img/Création-site-pour-voyageur.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur" />
+                                <a href="#" data-lightbox="img/Création-site-pour-voyageur.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+                                    <img src="img/Création-site-pour-voyageur.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur" />
                                 </a>
                                 <h3 class="mg-md text-center">
                                     Création d'un site internet pour un voyageur
@@ -216,8 +212,8 @@
                                 </p>
                             </div>
                             <div class="col-sm-6">
-                                <a href="#" data-lightbox="img/Conception-site-agence-de-mariage.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-                                    <img src="img/Conception-site-agence-de-mariage.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" />
+                                <a href="#" data-lightbox="img/Conception-site-agence-de-mariage.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+                                  <figure><img src="img/Conception-site-agence-de-mariage.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></figure>
                                 </a>
                                 <h3 class="mg-md text-center">
                                     Conception d'un site pour une agence de mariage
@@ -257,22 +253,22 @@
                             <div class="row row-no-gutters social">
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" title="twitter" href="https://twitter.com/explore"> <span class="fa fa-twitter icon-md"></span></a>
+                                        <a class="social" title="allez sur notre compte twitter" href="https://twitter.com/explore">TWITTER <span class="fa fa-twitter icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" title="facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+                                        <a class="social" title="allez sur notre compte facebook" href="https://www.facebook.com/">FACEBOOK<span class="fa fa-facebook icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" title="dribble" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+                                        <a class="social" title="allez sur notre compte dribble" href="https://dribbble.com/">DRIBBLE<span class="fa fa-dribbble icon-md"></span></a>
                                     </div>
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="text-center">
-                                        <a class="social" title="instagram" href="https://www.instagram.com/?hl=fr"><span class="fa fa-instagram icon-md"></span></a>
+                                        <a class="social" title="allez sur notre compte instagram" href="https://www.instagram.com/?hl=fr">INSTAGRAM<span class="fa fa-instagram icon-md"></span></a>
                                     </div>
                                 </div>
                             </div>
@@ -280,8 +276,20 @@
                     </div>
                 </div>
             </footer>
-            <!-- Footer - bloc-8 END -->
+            <!-- Footer - bloc-8 END --> 
         </div>
         <!-- Principal conteneur END -->
     </body>
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="./css/et-line.min.css" />
+
+    <script src="./js/jquery-2.1.0.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/blocs.min.js"></script>
+    <script src="./js/jquery.touchSwipe.min.js" defer></script>
+    <script src="./js/gmaps.min.js"></script>
+
+
 </html>
